invalid_label_sym_sym_arg_keywords_test/invalid_label_sym_sym_arg_keywords_test_5.src
.IPPcode24
JUMPIFEQ int TF@a GF@b